# cmake-git-version-tracking

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  git.c.in  git.h  git.h.in  git_watcher.cmake
.github/workflows/: main.yml
better-example/: CMakeLists.txt  README.md  git.cc.in  git.h  git_watcher.cmake  main.cc
demo/: .gitignore  CMakeLists.txt  README.md  git.h.in  main.cc
functional_tests/: run_all_tests.sh  test_no_tags.sh  test_version.sh  util.sh
hello-world/: .gitignore  CMakeLists.txt  git.h.in  main.cc
tests/: assert.sh  run_all.sh  run_examples.sh  test_branch_name.sh  test_commit_attributes.sh  test_dirty_head.sh  test_dirty_head_untracked.sh  test_git_created_post_configure.sh  test_git_describe_with_tag.sh  test_interfaces.sh  test_make_clean.sh  test_missing_header.sh  test_modified_preconfig_file.sh  test_multiline_messages.sh  test_new_commits.sh  test_no_change_means_no_rebuild.sh  test_no_git_history.sh  test_quote_messages.sh  test_semicolon_multiline_commit_message.sh  util.sh
tests/hello-world/: CMakeLists.txt  main.cc
tests/interfaces/c99/: CMakeLists.txt  main.c
tests/interfaces/cxx98_cxx17/: CMakeLists.txt  main.cc
